--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <td>
             <button onclick="number('9')">9</button>
         </td>
-        <td><input type="submit" onclick="action('div')" value="÷"></td>
+        <td><input type="submit" onclick="action('divide')" value="÷"></td>
     </tr>
     <tr>
         <td>
@@ -44,7 +44,7 @@
         <td>
             <button onclick="number('6')">6</button>
         </td>
-        <td><input type="submit" onclick="action('time')" value="×"></td>
+        <td><input type="submit" onclick="action('multiply')" value="×"></td>
     </tr>
     <tr>
         <td>
@@ -56,14 +56,14 @@
         <td>
             <button onclick="number('3')">3</button>
         </td>
-        <td><input type="submit" onclick="action('min')" value="-"></td>
+        <td><input type="submit" onclick="action('minus')" value="-"></td>
     </tr>
     <tr>
         <td colspan="2">
             <button onclick="number('0')">0</button>
         </td>
         <td>
-            <button onclick="number('point')">.</button>
+            <button onclick="number('point')" value=".">.</button>
         </td>
         <td rowspan="2"><input type="submit" onclick="action('plus')" value="+"></td>
     </tr>
@@ -75,20 +75,7 @@
 
 
 <table id="answ">
-    <tr>
-        <th>A</th>
-        <th>Veiksmas</th>
-        <th>B</th>
-        <th>=</th>
-    </tr>
 
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-
-    </tr>
 </table>
 
 </body>
